--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,48 @@
-.App {
-  text-align: center;
+body{
+  padding: 20px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+.poke-header{
+  display: flex;
+  gap: 25px;
+  align-items: baseline;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.header-title{
+  font-size: 30px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+
+.card-box{
+  display: flex;
+  justify-content: center;
+  width: 100vw;
+}
+.card-container{
+  display: flex;
+  flex-wrap: wrap;
+  
+  width: 65%;
+  justify-content: center;
+  
+  gap: 10px;
+  flex-wrap: wrap;
+}
+
+.poke-card{
   display: flex;
   flex-direction: column;
+  text-align: center;
+  width: 300px;
+  padding: 10px;
+  box-sizing: border-box;
+  box-shadow: 0px 3px 10px black;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  gap: 10px;
+  color: black;
+  background-color: floralwhite;
+  border-radius: 20px;
+  border: 2px solid;
+  border-color: floralwhite;
 }
