--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,34 @@
 body{
-  padding: 20px;
+  
 }
 
 header{
+  width: 100vw;
   background-color: blue;
   color: white;
+}
+.charizard{
+  z-index: 4;
+  width: 300px;
+  height: 300px;
+  position: relative;
+}
+
+.authBox{
+ display: flex;
+ justify-content: center;
+ align-items: center;
+ width: 100vw;
+ height: 100vh;
+ background-color: black;
+ z-index: 1;
+ position: relative;
+}
+.auth{
+  display: flex;
+  flex-direction: column;
+  
+  align-items: center;
 }
 
 .poke-header{
@@ -14,7 +38,7 @@ header{
 }
 
 .header-title{
-  font-size: 30px;
+  font-size: 50px;
 }
 
 
@@ -43,7 +67,6 @@ header{
   box-sizing: border-box;
   box-shadow: 0px 3px 10px black;
   align-items: center;
-  gap: 5px;
   color: black;
   background-color: floralwhite;
   border-radius: 20px;
@@ -51,7 +74,7 @@ header{
   border-color: floralwhite;
 }
 .poke-card img{
- width: 60%;
+ width: 80%;
  
 }
 .about{
