--- a/src/App.css
+++ b/src/App.css
@@ -54,14 +54,34 @@ header{
   height: 200px;
   border-radius: 20px;
 backdrop-filter: blur(2px) ;
-background-color: aliceblue;
- 
+background: rgb(255,0,0);
+background: linear-gradient(180deg, rgba(255,0,0,1) 0%, rgba(255,255,255,1) 67%);
+box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
 }
 .auth{
   display: flex;
   flex-direction: column;
   
   align-items: center;
+  
+}
+@media screen and (max-width: 768px){
+  .authBox{
+    display: flex;
+    flex-direction: column;
+  }
+  .authglass{
+    width: 300px;
+  }
+
+  .blastoise{
+    width: 200px;
+    height: 200px;
+  }
+  .charizard{
+    width: 200px;
+    height: 200px;
+  }
 }
 
 .poke-header{
