--- a/src/App.css
+++ b/src/App.css
@@ -69,7 +69,7 @@ button{
 .auth {
   display: flex;
   flex-direction: column;
-
+  gap: 15px;
   align-items: center;
 }
 .loginInput {
@@ -134,10 +134,10 @@ gap: 10px;
 
 @media screen and (max-width: 768px){
   .card-box{
-    width: 750px;
+    width: 700px;
   }
   .card-container{
-width: 750px;
+width: 700px;
   }
 }
 
@@ -146,7 +146,7 @@ width: 750px;
   flex-direction: column;
   text-align: center;
   width: 300px;
-  padding: 10px;
+  
   box-sizing: border-box;
 
   align-items: center;
