--- a/src/App.css
+++ b/src/App.css
@@ -10,11 +10,14 @@ body {
 
 header {
   width: 100vw;
-
+  padding: 25px;
   color: black;
 }
 button{
   border-radius: 10px;
+}
+.logout{
+  background-color: rgb(255, 0, 0);
 }
 .title {
   display: flex;
@@ -37,6 +40,7 @@ button{
   position: relative;
   padding: 5px;
 }
+
 
 .authBox {
   display: flex;
@@ -87,6 +91,14 @@ display: flex;
 flex-direction: column;
 gap: 10px;
 }
+
+.search-bar{
+  display: flex;
+  justify-content: center;
+  margin-bottom: 1em;
+  border-radius: 50px;
+  
+}
 @media screen and (max-width: 768px) {
   .authBox {
     display: flex;
@@ -103,6 +115,11 @@ gap: 10px;
   .charizard {
     width: 200px;
     height: 200px;
+  }
+
+  .search-bar{
+    display: flex;
+    justify-content: center;
   }
 }
 
