--- a/src/App.css
+++ b/src/App.css
@@ -171,6 +171,8 @@ button {
   footer {
     display: none;
   }
+ 
+
 }
 
 .poke-header {
@@ -199,21 +201,21 @@ button {
   flex-wrap: wrap;
 }
 
+
 @media screen and (max-width: 768px) {
-  .card-box {
-    width: 100%;
-  }
+  
   .card-container {
     width: 100%;
     padding: 25px;
   }
+  
 }
 
 .poke-card {
   display: flex;
   flex-direction: column;
   text-align: center;
-  width: 100%;
+  width: 30%;
 
   box-sizing: border-box;
 
@@ -313,7 +315,29 @@ button {
   }
   .welcomeBox {
   }
-
+.poke-card {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    width:70%;
+  
+    box-sizing: border-box;
+  
+    align-items: center;
+    color: black;
+    background: rgb(255, 0, 0);
+    background: linear-gradient(
+      180deg,
+      rgba(255, 0, 0, 1) 0%,
+      rgba(255, 255, 255, 1) 67%
+    );
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+      rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
+      rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+    border-radius: 20px;
+    padding: 25px;
+  }
+  
   .pokemonImages {
     display: flex;
     flex-direction: column;
@@ -352,4 +376,5 @@ button {
     rgba(255, 0, 0, 1) 0%,
     rgba(255, 255, 255, 1) 67%
   );
+
 }
